--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    runs:
+  using: 'node20'
+  main: 'main.js'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
