--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    runs: using: 'node20' main: 'main.js'
+    runs:
+    using: 'node20'
+    pre: 'setup.js'
+    main: 'index.js'
+    post: 'cleanup.js'
+   
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
