--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+       - name: GitHub Action for Juno
+         uses: junobuild/juno-action@v0.0.17
+            
 
       - uses: actions/setup-node@v3
         with:
