--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,15 @@ jobs:
     steps:
        - name: GitHub Action for Juno
          uses: junobuild/juno-action@v0.0.17
+         
+       - name: Check out the repo
+        uses: actions/checkout@v3
+
             
 
       - uses: actions/setup-node@v3
         with:
-          node-version: "20"
+          node-version: "18"
 
       - name: Install Dependencies
         run: npm ci
